Update intro subtitle
Change `font-size` to be bigger and add `text-shadow`.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2251,6 +2251,13 @@ input, select, textarea {
 		background-repeat: repeat, no-repeat;
 	}
 
+	#intro p {
+		font-size: 2rem;
+		line-height: 2.5;
+		text-shadow: 1px 1px 1px #000;
+
+	}
+
 /* One */
 
 	#one {
